--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <meta name="google-site-verification" content="FEtTLqedJgQE6KeXLsJuP2v04Ury4R8TTHd6T6TDRyE" />
 </head>
 
 <body :class="{ dark: isDarkMode }">
