--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <a href="https://github.com/getsettalk" target="_blank" class="text-decoration-none">Developed
                             By: Sujeet Kumar</a>
                     </div>
+                  
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 formContent">
                     <div class=" d-flex justify-content-center align-items-center text-center">
@@ -153,6 +154,7 @@
                             <button type="submit" class="button-61" :disabled="isLoading || isSubmitDisabled">
                                 <span v-if="isLoading">Sending...</span>
                                 <span v-else>Send Push Notification</span>
+                                <img v-if="isLoading" src="./radio.svg" alt="loading" style="width:20px; height: 20px;">
                             </button>
                         </div>
                     </form>
@@ -307,7 +309,7 @@
                             this.isLoading = false;
                         }
 
-                        this.isLoading = false;
+                      
                         console.log(data);
 
                     } else {
@@ -318,6 +320,7 @@
                             position: 'top-right',
                             duration: 3000, // How long the toast will display (in milliseconds)
                         });
+                        this.isLoading = false;
                     }
 
 
