--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test2FCM - Firebase Push Notification Testing Tool</title>
+    <title>Test2FCM - Firebase Push Notification for Multiple Device Testing Tool</title>
     <meta name="description"
         content="Test2FCM is a Firebase push notification testing tool that helps you send custom notifications to multiple devices. Test your notifications with ease.">
     <meta name="keywords"
-        content="Test2FCM, Firebase, push notification, testing tool, send notifications, custom notifications, fcm, token , fcm token, cloud messagaing">
+        content="Test2FCM, Firebase, push notification, testing tool, send notifications, custom notifications, fcm, token , fcm token, cloud messagaing, fcm tester, free fcm checker, send notification on android, send notification on ios, react native notification, react-native, RN notify, rn-firebase">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Test2FCM - Firebase Push Notification Testing Tool">
     <meta property="og:description"
